--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ lerna-debug.log*
 *.launch
 .settings/
 *.sublime-workspace
+.env.*local
 
 # IDE - VSCode
 .vscode/*
@@ -32,4 +33,3 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-db.sqlite
