--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:run": "node ./node_modules/typeorm/cli.js --config ./dist/ormconfig.prod.js migration:run"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
@@ -27,12 +28,14 @@
     "@nestjs/typeorm": "^7.1.3",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "dotenv-flow": "^3.2.0",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "sqlite": "^4.0.14",
-    "sqlite3": "^5.0.0",
-    "typeorm": "^0.2.25"
+    "ts-node": "^8.6.2",
+    "typeorm": "^0.2.25",
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -50,11 +53,9 @@
     "jest": "26.0.1",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "26.1.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "ts-jest": "26.1.0",
+    "ts-loader": "^6.2.1"
   },
   "jest": {
     "moduleFileExtensions": [
