--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/cqrs": "^7.0.1",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.3",
     "class-transformer": "^0.3.1",
@@ -58,9 +59,9 @@
     "jest": "26.0.1",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "tsconfig-paths": "^3.9.0",
     "ts-jest": "26.1.0",
-    "ts-loader": "^6.2.1"
+    "ts-loader": "^6.2.1",
+    "tsconfig-paths": "^3.9.0"
   },
   "jest": {
     "moduleFileExtensions": [
