--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "prod:log": "heroku logs --tail --app learning-nestjs-todo-app"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.15.0",
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.0.0",
     "@nestjs/cqrs": "^7.0.1",
+    "@nestjs/elasticsearch": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.3",
     "class-transformer": "^0.3.1",
